test/deprecated/localeGetChild.chpl
const cl = here.getChild(0);
